<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/game_header">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/food_entries"
            android:entryValues="@array/food_values"
            android:key="list_food_type"
            android:title="@string/food_type" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/background_entries"
            android:entryValues="@array/background_values"
            android:key="background_key"
            android:title="@string/background_type" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/difficulty_entries"
            android:entryValues="@array/difficulty_values"
            android:key="difficulty_key"
            android:title="@string/difficulty_type" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general_header">

        <SwitchPreferenceCompat
            app:key="music"
            app:title="@string/music_title" />

        <SwitchPreferenceCompat
            app:key="sound_effects"
            app:title="@string/effects_title" />

    </PreferenceCategory>

</PreferenceScreen>